force-app/main/default/objects/Student_2__c/Student_2__c.object-meta.xml
<CustomObject>
    <label>Student 2</label>
    <nameField>
        <label>Student 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>