force-app/main/default/objects/Student_2__c/fields/After_Week__c.field-meta.xml
<CustomField>
    <fullName>After_Week__c</fullName>
    <formula>CASE(  WEEKDAY( TODAY() )  , 
  1, &quot;I LOVE SLEEPING&quot;, 
  2, &quot;I LOVE SALESFORCE&quot;, 
  3, &quot;I LOVE SALESFORCE&quot;, 
  4, &quot;I LOVE SALESFORCE&quot;, 
  5, &quot;I LOVE SALESFORCE&quot;, 
  6, &quot;I LOVE SALESFORCE&quot;,  
  7,&quot;I LOVE SLEEPING&quot;, 
                NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Week</label>
    <type>Text</type>
</CustomField>