force-app/main/default/objects/Student_2__c/fields/Case_Format__c.field-meta.xml
<CustomField>
    <fullName>Case_Format__c</fullName>
    <formula>UPPER( LEFT( FirstName__c , 1) ) &amp;   LOWER( MID( FirstName__c , 2, LEN( FirstName__c ) -1 ) ) + &apos; &apos; + UPPER( LastName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Format</label>
    <type>Text</type>
</CustomField>