force-app/main/default/objects/Student_2__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <formula>FLOOR((10+40+50)/3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>