force-app/main/default/objects/Student_2__c/fields/Identity_Number__c.field-meta.xml
<CustomField>
    <fullName>Identity_Number__c</fullName>
    <label>Identity Number</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>