force-app/main/default/objects/Student_2__c/fields/isCorporate__c.field-meta.xml
<CustomField>
    <fullName>isCorporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCorporate?</label>
    <type>Checkbox</type>
</CustomField>