force-app/main/default/objects/Student_2__c/fields/Odev__c.field-meta.xml
<CustomField>
    <fullName>Odev__c</fullName>
    <formula>TEXT(Gender__c) &amp;  FirstName__c  &amp;  LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Odev</label>
    <type>Text</type>
</CustomField>