force-app/main/default/objects/Student_2__c/fields/Reading_Books__c.field-meta.xml
<CustomField>
    <fullName>Reading_Books__c</fullName>
    <label>Reading Books</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sherlock Holmes</fullName>
            </value>
            <value>
                <fullName>GOT</fullName>
            </value>
            <value>
                <fullName>ROL</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>