force-app/main/default/objects/Student_2__c/fields/Soru_2__c.field-meta.xml
<CustomField>
    <fullName>Soru_2__c</fullName>
    <formula>MONTH( BirthOfDate__c ) =  MONTH( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soru 2</label>
    <type>Checkbox</type>
</CustomField>