force-app/main/default/objects/Student_2__c/fields/Teacher_2__c.field-meta.xml
<CustomField>
    <fullName>Teacher_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher 2</label>
    <referenceTo>Teacher_2__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>