force-app/main/default/objects/Student_2__c/fields/Tek_Sayi__c.field-meta.xml
<CustomField>
    <fullName>Tek_Sayi__c</fullName>
    <formula>MOD(YEAR( TODAY() ) - YEAR( BirthOfDate__c ) ,2) = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tek Sayi</label>
    <type>Checkbox</type>
</CustomField>