force-app/main/default/objects/Student_2__c/recordTypes/Personel_Student_RT.recordType-meta.xml
<RecordType>
    <fullName>Personel_Student_RT</fullName>
    <active>true</active>
    <label>Personel Student RT</label>
</RecordType>