force-app/main/default/objects/Student_2__c/validationRules/Graduation_Date_Not_Early_Enrollment.validationRule-meta.xml
<ValidationRule>
    <fullName>Graduation_Date_Not_Early_Enrollment</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY()  -   Graduation_Date__c &lt;0 || 
Enrollment_Date__c &gt; Graduation_Date__c</errorConditionFormula>
    <errorDisplayField>Graduation_Date__c</errorDisplayField>
    <errorMessage>Graduation Date Not Early Enrollment</errorMessage>
</ValidationRule>