force-app/main/default/objects/Student_2__c/validationRules/Not_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY()  -  Enrollment_Date__c &lt;0 ||
   ISBLANK( Enrollment_Date__c )</errorConditionFormula>
    <errorDisplayField>Enrollment_Date__c</errorDisplayField>
    <errorMessage>No Future Date or Is Not Blank</errorMessage>
</ValidationRule>