force-app/main/default/objects/Student_2__c/validationRules/Student_Is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>IF( isActive__c , 
OR(ISBLANK(Email__c),
ISBLANK(Phone__c),
ISBLANK(TEXT(Status__c))) 
, false)</errorConditionFormula>
    <errorDisplayField>isActive__c</errorDisplayField>
    <errorMessage>When Student is Active, email and phone fields are not blank</errorMessage>
</ValidationRule>