force-app/main/default/objects/Student_2__c/validationRules/StudentIsPrivateOrCorporate.validationRule-meta.xml
<ValidationRule>
    <fullName>StudentIsPrivateOrCorporate</fullName>
    <active>true</active>
    <errorConditionFormula>IF( isCorporate__c , 
ISBLANK( Account__c) ||  NOT(ISBLANK( Parent__c )) ,  

(IF((YEAR(TODAY()) - YEAR(BirthOfDate__c ))&lt;18 ,NOT(ISBLANK( Account__c)) || ISBLANK( Parent__c ), NOT(ISBLANK( Parent__c ))


)))</errorConditionFormula>
    <errorMessage>Nano Pronlem</errorMessage>
</ValidationRule>