force-app/main/default/objects/Student_2__c/validationRules/Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX( Phone__c , &apos;\\p{Punct}\\W&apos;)</errorConditionFormula>
    <errorMessage>sikinti</errorMessage>
</ValidationRule>