force-app/main/default/objects/Student_2__c/listViews/Corporate_Students.listView-meta.xml
<ListView>
    <fullName>Corporate_Students</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isCorporate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Corporate Students</label>
</ListView>